# Calc_fluxo_de_particulas_neutras

./: Arquivo_de_entrada.txt  BuildMatricesWIthTxt.h  CMakeLists.txt  DD  DD.cpp  DDNumericalMethod.cpp  DDNumericalMethod.h  DDNumericalMethold.h  DataMatrices.h  FinalVersion_Calc_of_particles_neutral_flux.cbp  FinalVersion_Calc_of_particles_neutral_flux.depend  FinalVersion_Calc_of_particles_neutral_flux.layout  GausLegendreQuadrature.h  Gauss-Legendre_quadrature  LegendrePolynomial.h  Matrizes_de_dados  Matrizes_de_dados.cpp  Polinomio_de_Legendre.cpp  Saida_Dados_R3_G1_L1_N4_Nod200.txt  VariablesUsed.h  Variaveis_utilizadas  get_GQ.h  main.cpp  man
DDMethod/: CMakeLists.txt  DDNumericalMethod.cpp  DDNumericalMethod.h  LegendrePolynomial.h  VariablesUsed.h
